--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -13,24 +13,24 @@ The introduction should:
 
 # Introduction
 
-Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  This knowledge provides foundational information for 
- understanding species ranges and diversity,
- predicting species responses to human impacts and climate change,
- and managing and protecting species effectively.
-<!--___A rich literature tackles the many dimensions of these questions.___-->
+Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation.  This body of science has resulted in various compiled databases of species distribution maps which provide foundational information for understanding species ranges and diversity, predicting species responses to human impacts and climate change, and managing and protecting species effectively.  No species range dataset can claim to represent the "truth" of any species' spatial distribution, but rather each offers its own distinct and often divergent understanding of the "true" distribution.  Despite the uncertainty and variation among species range datasets, conservation managers and policy makers must act on conclusions drawn from these data.  It is critical to understand the differences in spatial range datasets and the implications of these differences on conservation decisions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps [@kaschner_aquamaps:_2015] and range data from the International Union for Conservation of Nature (IUCN) [@iucn_iucn_2015].  Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each offers an understanding of the truth, with IUCN ranges relying primarily on expert opinion and AquaMaps on model predictions.  Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: geographic range data such as IUCN range maps frequently introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps will likely introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  
+<!--implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.-->
 
-These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies. <!-- For example, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.-->
+The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion [@iucn_iucn_2015].  Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: geographic range data such as IUCN range maps frequently introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps will likely introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  
+
+These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
 
 To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of the `r format(n_spp_all, big.mark = ',')` marine species mapped by one or both datasets.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  Yet the small overlap in mapped species between the two datasets means each provides unique value in taxonomic and geographic coverage. 
 
-Although relatively small in number, these overlap species present a unique opportunity to evaluate the two datasets overall.  As understanding of a given species improves, we expect that range maps, regardless of method, would become more accurate in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both distribution and overall area; from the results we determine methodological issues that can introduce commission errors, and suggest methods to improve confidence in species range predictions.  In particular, we show how solving a simple problem in coral ranges in the IUCN range data dramatically ___improves agreement with Aquamaps data.___ - _does this make it sound like agreement is the goal? make it clear that agreement implies better confidence_
+Although relatively small in number, these overlap species present a unique opportunity to evaluate the two datasets overall.  As understanding of a given species improves, we expect that range maps, regardless of method, would become more accurate in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both distribution and overall area.
+
+Using this alignment framework, we explore methodological issues that can introduce errors, and suggest methods to improve confidence in species range predictions.  In particular, we show how explicitly using depth as a constraint on coral ranges in IUCN range data dramatically improves concurrence with AquaMaps data, ___and highlight a side effect of AquaMaps methodology that results in surprising species range boundaries.___
 
 <!--
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
 -->
 
-We then reexamine a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as a case study to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
+As a case study, we then reexamine a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as a case study to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
 
-While we have identified some potential issues in each dataset, we cannot simply recommend one data set over the other.  Instead, we recommend simple methods to reduce incidence of errors in each dataset, improving confidence in species range predictions to better inform conservation management and policy decisions.
+While we have identified some potential issues in each dataset, we cannot simply recommend one data set over the other.  Instead, we recommend simple methods to account for incidence of errors in each dataset, improving confidence in species range predictions to better inform conservation management and policy decisions.
