--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -16,14 +16,13 @@ output:
 bibliography: refs/zotero_lib.bib
 ---
 
+Short title: "Aligning marine species range data"
 <!-- Full title	250 characters	Specific, descriptive, concise, and comprehensible to readers outside the field	 -->
 <!--   Impact of Cigarette Smoke Exposure on Innate Immunity: A Caenorhabditis elegans Model -->
 <!--   Solar Drinking Water Disinfection (SODIS) to Reduce Childhood Diarrhoea in Rural Bolivia: A Cluster-Randomized, Controlled Trial -->
 <!-- Short title	70 characters	State the topic of the study	 -->
 <!--   Cigarette Smoke Exposure and Innate Immunity -->
 <!--   SODIS and Childhood Diarrhoea -->
-
-_Author affiliation:_ <!--Include department, institution, and complete address, with the ZIP/postal code, for each author. Use superscripts to match authors with institutions. Authors are encouraged to supply their ORCID ID at submission-->
 
 1. National Center for Ecological Analysis and Synthesis, University of California, 735 State Street Suite 300, Santa Barbara CA 93101
 2. Bren School of Environmental Science and Management, University of California, Santa Barbara CA 93106
